file(GLOB SRB2_WIN_SOURCES *.c *.h *.rc)

if(${SRB2_CONFIG_HWRENDER})
	set(SRB2_WIN_SOURCES ${SRB2_WIN_SOURCES} ${SRB2_HWRENDER_SOURCES} ${SRB2_HWRENDER_HEADERS})
	set(SRB2_WIN_SOURCES ${SRB2_WIN_SOURCES} ${SRB2_R_OPENGL_SOURCES} ${SRB2_R_OPENGL_HEADERS})
endif()

add_executable(SRB2DD EXCLUDE_FROM_ALL WIN32
	${SRB2_WIN_SOURCES}
)

target_compile_definitions(SRB2DD PRIVATE
	-D_WINDOWS
)

set_target_properties(SRB2DD PROPERTIES OUTPUT_NAME ${SRB2_WIN_EXE_NAME})

target_link_libraries(SRB2DD PRIVATE SRB2Core)
